# portend

./: .travis.yml  CHANGES.rst  README.rst  mypy.ini  portend.py  pyproject.toml  pytest.ini  setup.cfg  test_portend.py
docs/: index.rst
